fixed gap in between the about you text and interests

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,11 +36,7 @@ header, .post:not(:last-child) {
   padding: 10px;
 }
 
-#location {
-  display: flex;
-  margin: 10px;
-  margin-inline: -310px;
-}
+
 /* Select Interests Button */
 #dropdownMenuButton {
   display: flex;
@@ -61,6 +57,12 @@ header, .post:not(:last-child) {
   margin-inline: -295px;
 }
 
+#location {
+  display: flex;
+  margin: 10px;
+  margin-inline: -310px;
+}
+
 #submit_btn {
   display: flex;
   margin: 10px;
@@ -71,4 +73,8 @@ header, .post:not(:last-child) {
 .col-3 {
   margin-top: 30px;
   
+}
+
+.col-2{
+  margin-bottom: 10px;
 }
